welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: method murNord has return statement; needs result type
				return true;
                                ^SnakeBuggle:12: error: method murNord has return statement; needs result type
				return false;
                                ^SnakeBuggle:19: error: method murNord has return statement; needs result type
				return true;
                                ^SnakeBuggle:23: error: method murNord has return statement; needs result type
				return false;
                                ^SnakeBuggle:29: error: method posFinale has return statement; needs result type
			return true;
                        ^SnakeBuggle:31: error: method posFinale has return statement; needs result type
		else return false;
                     ^